MDEV-22011: DISTINCT with JSON_ARRAYAGG gives wrong results

For JSON_ARRAYAGG with DISTINCT also store the null bytes for the record
inside the Unique object